refactor: Improve code readability and formatting in ComputeService.java